# Educational-Plagiarism-Detector

./: .gitignore  README.md  create_test_data.py  from src.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-ci.yml  tests.yml
scripts/: run_detector.py
src/: main.py  utils.py
tests/: __init__.py  test_main.py
